[tool.poetry]
name = "matplotlib-weather"
version = "0.1.0"
description = ""
authors = ["Артур Нахатакян <artoim333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
